use new uri methods